--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@ https://templatemo.com/tm-531-reflux
                 <div class="right-text">
                   <h4>Explore</h4>
                   <p>
-                     CSE undergrad having a hands on working with different technologies 
+                     CSE undergrad having a hands on working with different technologies.
+
                      Motivated for machine learning and AI-base driven solution for real-world problems.
                   </p>
-                  <p>Latest works include An Android based chat app for Deaf_Blind people, AI-based soil monitoring
+                  <p>Latest works include An Android based chat app for Deaf-Blind people, AI-based soil monitoring
                   system, Ideal place to live in Bangore, and a OpenCV based Document Scanner.</P>
-                  <p>Loves to meet with new people for seek information.
+                  <p>Loves to meet with new people to seek info.
                   Feel free to interreact. 
                   </p>
                   
@@ -120,7 +121,7 @@ https://templatemo.com/tm-531-reflux
                     Let me know if you have any questions about my resume attached below.
                   </p>
                   <div class="white-button">
-                    <a href="#">Resume</a>
+                    <a href="assets/images/kd_image/cv.pdf" download>Resume</a>
                   </div>
                 </div>
               </div>
