--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@ https://templatemo.com/tm-531-reflux
                     Let me know if you have any questions about my resume attached below.
                   </p>
                   <div class="white-button">
-                    <a href="assets/images/kd_image/cv.pdf" download>Resume</a>
+                    <a href ="assets/cv.pdf" target="blank">
+                      Resume
+                    </a>
                   </div>
                 </div>
               </div>
